--- a/css/index.css
+++ b/css/index.css
@@ -114,11 +114,13 @@ header {
   border-radius: 1rem;
 }
 
-#menuList li:hover, #menuList li:hover > a  {
+#menuList li:hover,
+#menuList li:hover > a {
   color: var(--black);
 }
 
-#menuList li, #menuList li a{
+#menuList li,
+#menuList li a {
   font-size: 1.6rem;
   color: var(--white);
 }
@@ -223,23 +225,23 @@ header {
   height: 100vh;
 }
 
-#entreprise:hover{
- padding-bottom: 0;
+#entreprise:hover {
+  padding-bottom: 0;
 }
-#entreprise:hover #menuEntreprise{
+#entreprise:hover #menuEntreprise {
   display: block;
 }
 
-#menuEntreprise li{
+#menuEntreprise li {
   padding-left: 1rem;
   margin: 0;
 }
 
-#menuEntreprise li:nth-child(1){
+#menuEntreprise li:nth-child(1) {
   margin-top: 1rem;
 }
 
-#menuEntreprise{
+#menuEntreprise {
   display: none;
 }
 
@@ -257,8 +259,8 @@ header {
   background: linear-gradient(
     140deg,
     rgba(19, 19, 19, 1) 0%,
-    rgba(220,220,220, 1) 15%,
-    rgba(220,220,220, 1) 85%,
+    rgba(220, 220, 220, 1) 15%,
+    rgba(220, 220, 220, 1) 85%,
     rgba(255, 64, 41, 1) 100%
   );
 }
@@ -301,104 +303,4 @@ header {
   100% {
     left: 150vw;
   }
-}
-
-/* FOOTER */
-
-footer {
-  position: -webkit-sticky;
-  position: sticky;
-  font-family: "Inter", sans-serif;
-  top: auto;
-  bottom: 0;
-  width: 100vw;
-  height: 35vh;
-  z-index: 1;
-  background-color: var(--footer);
-}
-
-footer li a.selected {
-  color: var(--yellow);
-}
-
-#skyline {
-  position: absolute;
-  bottom: 21%;
-  width: 100vw;
-  text-align: center;
-  z-index: -1;
-  transform: scale(1.2);
-}
-
-footer span {
-  font-size: 2rem;
-  font-weight: bold;
-  color: var(--white);
-  letter-spacing: 0.3rem;
-  display: block;
-  text-align: center;
-  padding: 3rem;
-}
-
-#link {
-  position: absolute;
-  right: 6%;
-  margin-top: 3.5%;
-}
-
-footer article {
-  position: relative;
-}
-
-footer h5 {
-  color: red;
-  font-size: 2rem;
-}
-
-footer h5::selection {
-  background-color: var(--yellow);
-}
-
-footer li {
-  list-style-type: none;
-  cursor: url("../images/cursors/Belgium_Flag_Pointer.png"), pointer;
-}
-
-footer li:hover a {
-  color: var(--yellow);
-}
-
-footer li a {
-  font-size: 1.4rem;
-  text-decoration: none;
-  color: var(--white);
-}
-
-footer p {
-  color: var(--white);
-  font-size: 1.2rem;
-}
-
-#copyright {
-  position: absolute;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  z-index: 2;
-  text-align: center;
-  padding-bottom: 1rem;
-  padding-top: 1rem;
-  background-color: var(--blackMenuList);
-}
-
-#logo {
-  width: 15%;
-  position: absolute;
-  left: 3%;
-  margin-top: 3.5%;
-}
-
-#logoImage {
-  width: 250px;
-  filter: brightness(0) invert(1);
 }
