--- a/css/interview.css
+++ b/css/interview.css
@@ -53,19 +53,19 @@ header nav li a.selected {
   color: var(--red);
 }
 
-#entreprise{
+#entreprise {
   position: relative;
 }
 
-#entreprise:hover #menuEntreprise{
+#entreprise:hover #menuEntreprise {
   display: block;
 }
 
-#entreprise #menuEntreprise:hover{
+#entreprise #menuEntreprise:hover {
   display: block;
 }
 
-#menuEntreprise{
+#menuEntreprise {
   display: none;
   position: absolute;
   background-color: var(--blackMenuList);
@@ -75,11 +75,11 @@ header nav li a.selected {
   top: 100%;
 }
 
-#menuEntreprise li a{
+#menuEntreprise li a {
   font-size: 1.25rem;
 }
 
-#menuEntreprise li::before{
+#menuEntreprise li::before {
   content: "-";
   position: absolute;
   color: white;
@@ -245,11 +245,13 @@ main {
   text-align: justify;
 }
 
-#infos *::selection{
+#infos *::selection {
   background: var(--blue);
 }
 
-#infos h2::selection, #infos span::selection, #infos img::selection{
+#infos h2::selection,
+#infos span::selection,
+#infos img::selection {
   background: var(--red);
 }
 
@@ -264,7 +266,7 @@ main {
 }
 
 .showingDiv h2 {
-  background: rgb(220,220,220);
+  background: rgb(220, 220, 220);
   color: black;
 }
 
@@ -272,7 +274,7 @@ main {
   background: var(--blue);
 }
 
-.showingDiv p::selection{
+.showingDiv p::selection {
   background: var(--blue);
 }
 
@@ -286,7 +288,6 @@ main {
   );
   color: black;
 }
-
 
 .showingDiv p {
   font-family: "Inter", sans-serif;
@@ -305,17 +306,17 @@ main {
 }
 
 /* Conclusion */
-#conclusion{
-  background-color: rgb(220,220,220);
+#conclusion {
+  background-color: rgb(220, 220, 220);
   padding: 0 1rem 1rem 1rem;
 }
 
-#conclusion p{
+#conclusion p {
   margin-top: 1rem;
   text-align: center;
 }
 
-#conclusion h2{
+#conclusion h2 {
   text-align: center;
   font-size: 2.5rem;
   padding-top: 1rem;
@@ -345,108 +346,22 @@ main {
   animation: cloud 30s linear infinite;
 }
 
-footer {
-  position: -webkit-sticky;
-  position: sticky;
-  font-family: "Inter", sans-serif;
-  top: auto;
-  bottom: 0;
-  width: 100vw;
-  height: 45vh;
-  z-index: 1;
-  background-color: var(--footer);
-}
-
-footer section{
-  position: relative;
+article section {
   z-index: 2;
-}
-
-footer li a.selected {
-  color: var(--red);
-}
-
-#skyline {
-  position: absolute;
-  bottom: 10%;
-  width: 100vw;
-  text-align: center;
-  z-index: -1;
-}
-
-footer span {
-  font-size: 2rem;
-  font-weight: bold;
-  color: var(--white);
-  letter-spacing: 0.3rem;
-  display: block;
-  text-align: center;
-  padding: 3rem;
-}
-
-#link {
-  position: absolute;
-  right: 6%;
-  margin-top: 5.5%;
 }
 
 footer article {
   position: relative;
 }
 
-footer *::selection{
+footer *::selection {
   background-color: var(--blue);
-}
-
-footer h5 {
-  color: red;
-  font-size: 2rem;
 }
 
 footer h5::selection {
   background-color: var(--red);
 }
 
-footer li {
-  list-style-type: none;
-  cursor: url("../images/cursors/Belgium_Flag_Pointer.png"), pointer;
-}
-
 footer li:hover a {
   color: var(--blue);
-}
-
-footer li a {
-  font-size: 1.4rem;
-  text-decoration: none;
-  color: var(--white);
-}
-
-footer p {
-  color: var(--white);
-  font-size: 1.2rem;
-}
-
-#copyright {
-  position: absolute;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  z-index: 2;
-  text-align: center;
-  padding-bottom: 1rem;
-  padding-top: 1rem;
-  background-color: var(--blackMenuList);
-}
-
-#logo {
-  width: 15%;
-  position: absolute;
-  left: 3%;
-  margin-top: 5.5%;
-}
-
-#logoImage {
-  width: 250px;
-  filter: brightness(0) invert(1);
 }
