--- a/css/rapport.css
+++ b/css/rapport.css
@@ -1,287 +1,202 @@
 * {
-    cursor: url("../images/cursors/France_Flag_Cursor.png"), auto;
-  }
-  
-  a,
-  button,
-  #menu,
-  #menu > span,
-  a img {
-    cursor: url("../images/cursors/France_Flag_Pointer.png"), pointer;
-  }
-  
-  #content .showingDiv h2 {
-    cursor: url("../images/cursors/France_Flag_Pointer.png"), pointer;
-  }
-  
-  /* HEADER */
-  header nav {
-    position: fixed;
-    z-index: 3;
-    top: 0;
-    left: 0;
-    right: 0;
-    background-color: var(--blackMenuList);
-    height: 3.5rem;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  header nav li {
-    list-style-type: none;
-    display: inline-block;
-    margin: 0 1rem 0 1rem;
-  }
-  
-  header nav li a {
-    text-decoration: none;
-    color: white;
-    font-size: 1.5rem;
-  }
-  
-  header nav li a:visited {
-    color: white;
-  }
-  
-  header nav li a:hover {
-    color: var(--blue);
-  }
-  
-  header nav li a.selected {
-    color: var(--red);
-  }
-  
-  #entreprise{
-    position: relative;
-  }
+  cursor: url("../images/cursors/France_Flag_Cursor.png"), auto;
+}
 
-  #entreprise:hover #menuEntreprise{
-    display: block;
-  }
+a,
+button,
+#menu,
+#menu > span,
+a img {
+  cursor: url("../images/cursors/France_Flag_Pointer.png"), pointer;
+}
 
-  #entreprise #menuEntreprise:hover{
-    display: block;
-  }
+#content .showingDiv h2 {
+  cursor: url("../images/cursors/France_Flag_Pointer.png"), pointer;
+}
 
-  #menuEntreprise{
-    display: none;
-    position: absolute;
-    background-color: var(--blackMenuList);
-    padding: 15% 0.5rem 0.5rem 1rem;
-    border-bottom-left-radius: 0.5rem;
-    border-bottom-right-radius: 0.5rem;
-    top: 100%;
-  }
+/* HEADER */
+header nav {
+  position: fixed;
+  z-index: 3;
+  top: 0;
+  left: 0;
+  right: 0;
+  background-color: var(--blackMenuList);
+  height: 3.5rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
 
-  #menuEntreprise li a{
-    font-size: 1.25rem;
-  }
+header nav li {
+  list-style-type: none;
+  display: inline-block;
+  margin: 0 1rem 0 1rem;
+}
 
-  #menuEntreprise li::before{
-    content: "-";
-    position: absolute;
-    color: white;
-    font-weight: bold;
-    font-size: 1.25rem;
-    left: 6%;
-  }
-  /* MAIN */
-  
-  main {
-    position: relative;
-    z-index: 2;
-    margin-top: 3rem;
-    background: linear-gradient(
-      120deg,
-      rgba(0, 0, 255, 1) 0%,
-      rgba(200, 200, 200, 1) 45%,
-      rgba(200, 200, 200, 1) 55%,
-      rgba(255, 0, 0, 1) 100%
-    );
-  }
+header nav li a {
+  text-decoration: none;
+  color: white;
+  font-size: 1.5rem;
+}
 
-  h1{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: rgb(242, 103, 65);
-    color: white;
-    font-size: 3rem;
-    text-align: center;
-    height: 25vh;
-  }
+header nav li a:visited {
+  color: white;
+}
 
-  #demarche{
-    background-color: rgb(46, 110, 171);
-  }
+header nav li a:hover {
+  color: var(--blue);
+}
 
-  #demarche p{
-    padding: 1rem;
-    font-size: 1.5rem;
-    color: white;
-  }
+header nav li a.selected {
+  color: var(--red);
+}
 
-  #description{
-    background-color: rgb(255, 223, 93)
-  }
-  
+#entreprise {
+  position: relative;
+}
 
-  #description section{
-    margin-right: 1rem;
-  }
+#entreprise:hover #menuEntreprise {
+  display: block;
+}
 
-  #description h2{
-    padding-left: 1rem;
-    font-size: 2rem;
-  }
+#entreprise #menuEntreprise:hover {
+  display: block;
+}
 
-  #description p{
-    padding: 1rem;
-    font-size: 1.5rem;
-  }
+#menuEntreprise {
+  display: none;
+  position: absolute;
+  background-color: var(--blackMenuList);
+  padding: 15% 0.5rem 0.5rem 1rem;
+  border-bottom-left-radius: 0.5rem;
+  border-bottom-right-radius: 0.5rem;
+  top: 100%;
+}
 
-  #demarche, #description{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-  }
+#menuEntreprise li a {
+  font-size: 1.25rem;
+}
 
-  #demarche p, #description p{
-    vertical-align: top;
-  }
+#menuEntreprise li::before {
+  content: "-";
+  position: absolute;
+  color: white;
+  font-weight: bold;
+  font-size: 1.25rem;
+  left: 6%;
+}
+/* MAIN */
 
-  #demarche img, #description img{
-    width: 50%;
-  }
-  
-  /* FOOTER */
-  
-  @keyframes cloud {
-    0% {
-      left: -110vw;
-    }
-  
-    100% {
-      left: 150vw;
-    }
-  }
-  
-  #cloud img {
-    position: absolute;
-    z-index: 1;
-    bottom: 30%;
-    transform: scaleY(-1);
-    opacity: 0.5;
+main {
+  position: relative;
+  z-index: 2;
+  margin-top: 3rem;
+  background: linear-gradient(
+    120deg,
+    rgba(0, 0, 255, 1) 0%,
+    rgba(200, 200, 200, 1) 45%,
+    rgba(200, 200, 200, 1) 55%,
+    rgba(255, 0, 0, 1) 100%
+  );
+}
+
+h1 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(242, 103, 65);
+  color: white;
+  font-size: 3rem;
+  text-align: center;
+  height: 25vh;
+}
+
+#demarche {
+  background-color: rgb(46, 110, 171);
+}
+
+#demarche p {
+  padding: 1rem;
+  font-size: 1.5rem;
+  color: white;
+}
+
+#description {
+  background-color: rgb(255, 223, 93);
+}
+
+#description section {
+  margin-right: 1rem;
+}
+
+#description h2 {
+  padding-left: 1rem;
+  font-size: 2rem;
+}
+
+#description p {
+  padding: 1rem;
+  font-size: 1.5rem;
+}
+
+#demarche,
+#description {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+#demarche p,
+#description p {
+  vertical-align: top;
+}
+
+#demarche img,
+#description img {
+  width: 50%;
+}
+
+/* FOOTER */
+
+@keyframes cloud {
+  0% {
     left: -110vw;
-    animation: cloud 30s linear infinite;
-  }
-  
-  footer {
-    position: -webkit-sticky;
-    position: sticky;
-    font-family: "Inter", sans-serif;
-    top: auto;
-    bottom: 0;
-    width: 100vw;
-    height: 45vh;
-    z-index: 1;
-    background-color: var(--footer);
-  }
-  
-  footer section{
-    position: relative;
-    z-index: 2;
   }
 
-  footer li a.selected {
-    color: var(--red);
+  100% {
+    left: 150vw;
   }
+}
 
-  #skyline {
-    position: absolute;
-    bottom: 10%;
-    width: 100vw;
-    text-align: center;
-    z-index: -1;
-  }
-  
-  footer span {
-    font-size: 2rem;
-    font-weight: bold;
-    color: var(--white);
-    letter-spacing: 0.3rem;
-    display: block;
-    text-align: center;
-    padding: 3rem;
-  }
-  
-  #link {
-    position: absolute;
-    right: 6%;
-    margin-top: 5.5%;
-  }
-  
-  footer article {
-    position: relative;
-  }
-  
-  footer *::selection{
-    background-color: var(--blue);
-  }
-  
-  footer h5 {
-    color: red;
-    font-size: 2rem;
-  }
-  
-  footer h5::selection {
-    background-color: var(--red);
-  }
-  
-  footer li {
-    list-style-type: none;
-    cursor: url("../images/cursors/Belgium_Flag_Pointer.png"), pointer;
-  }
-  
-  footer li:hover a {
-    color: var(--blue);
-  }
-  
-  footer li a {
-    font-size: 1.4rem;
-    text-decoration: none;
-    color: var(--white);
-  }
-  
-  footer p {
-    color: var(--white);
-    font-size: 1.2rem;
-  }
-  
-  #copyright {
-    position: absolute;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    z-index: 2;
-    text-align: center;
-    padding-bottom: 1rem;
-    padding-top: 1rem;
-    background-color: var(--blackMenuList);
-  }
-  
-  #logo {
-    width: 15%;
-    position: absolute;
-    left: 3%;
-    margin-top: 5.5%;
-  }
-  
-  #logoImage {
-    width: 250px;
-    filter: brightness(0) invert(1);
-  }
-  
+#cloud img {
+  position: absolute;
+  z-index: 1;
+  bottom: 30%;
+  transform: scaleY(-1);
+  opacity: 0.5;
+  left: -110vw;
+  animation: cloud 30s linear infinite;
+}
+
+article section {
+  z-index: 2;
+}
+
+footer article {
+  position: relative;
+}
+
+footer *::selection {
+  background-color: var(--blue);
+}
+
+footer h5::selection {
+  background-color: var(--red);
+}
+
+footer li:hover a {
+  color: var(--blue);
+}
