correction path css

--- a/css/base/main.css
+++ b/css/base/main.css
@@ -4,7 +4,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  cursor: url("../images/cursors/Belgium_Flag_Cursor.png"), auto;
+  cursor: url("../../images/cursors/Belgium_Flag_Cursor.png"), auto;
 }
 
 :root {
@@ -24,7 +24,7 @@ button,
 #menu,
 #menu > span,
 a img {
-  cursor: url("../images/cursors/Belgium_Flag_Pointer.png"), pointer;
+  cursor: url("../../images/cursors/Belgium_Flag_Pointer.png"), pointer;
 }
 
 nav {
