--- a/css/base/footer.css
+++ b/css/base/footer.css
@@ -54,7 +54,7 @@ footer h5::selection {
 
 footer li {
   list-style-type: none;
-  cursor: url("../images/cursors/Belgium_Flag_Pointer.png"), pointer;
+  cursor: url("../../images/cursors/Belgium_Flag_Pointer.png"), pointer;
 }
 
 footer li:hover a {
