--- a/css/rapport.css
+++ b/css/rapport.css
@@ -100,6 +100,7 @@ main {
     rgba(200, 200, 200, 1) 55%,
     rgba(255, 0, 0, 1) 100%
   );
+  font-family: "Inter", sans-serif;
 }
 
 h1 {
@@ -110,7 +111,7 @@ h1 {
   color: white;
   font-size: 3rem;
   text-align: center;
-  height: 25vh;
+  height: 12.5vh;
 }
 
 #demarche {
