--- a/css/interview.css
+++ b/css/interview.css
@@ -307,18 +307,26 @@ main {
 
 /* Conclusion */
 #conclusion {
-  background-color: rgb(220, 220, 220);
+  font-family: "Inter", sans-serif;
+  background: linear-gradient(
+    140deg,
+    rgba(0, 0, 255, 1) 0%,
+    rgba(220, 220, 220, 1) 8%,
+    rgba(220, 220, 220, 1) 92%,
+    rgba(255, 0, 0, 1) 100%
+  );
   padding: 0 1rem 1rem 1rem;
 }
 
 #conclusion p {
   margin-top: 1rem;
   text-align: center;
+  padding: 0 1.5rem 0 1.5rem;
 }
 
 #conclusion h2 {
   text-align: center;
-  font-size: 2.5rem;
+  font-size: 2rem;
   padding-top: 1rem;
   text-transform: uppercase;
   text-decoration: underline;
