Changement couleur secteur

--- a/css/organigramme.css
+++ b/css/organigramme.css
@@ -67,7 +67,7 @@
   top: 27.5%;
   left: 50%;
   font-size: 1.3rem;
-  background-color: var(--yellow);
+  background-color: rgb(240, 105, 27);
 }
 
 #organigramme #poleCRM,
