--- a/css/base/content.css
+++ b/css/base/content.css
@@ -13,6 +13,7 @@ main {
 }
 
 .showingDiv h2 {
+  position: relative;
   color: var(--black);
   font-size: 1.6rem;
   background-color: var(--yellow);
@@ -75,4 +76,21 @@ main {
 #contentTitle img {
   height: 3rem;
   margin-bottom: 1rem;
+}
+
+#content .showingDiv .arrow {
+  position: absolute;
+  background-color: transparent;
+  padding: 0.5rem;
+  padding: 0;
+  width: 25px;
+  height: 25px;
+  overflow: hidden;
+  right: 25px;
+  top: 12px;
+}
+
+#content .showingDiv .arrow img {
+  transition: transform 0.5s linear;
+  transform: rotate(90deg);
 }
